--- a/a.html
+++ b/a.html
@@ -525,7 +525,7 @@ align-items: center;
 justify-content: center;
 margin-bottom: 50px;
 text-shadow: 0 0 10px rgb(225 12 168), 0 0 10px rgb(225 12 168), 0 0 10px rgb(225 12 168);
-text-align: center;">hello</div>
+text-align: center;">CHUNG EM CHO CO 20/10</div>
 
   </script>
 
